--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>EventSphere</title>
 </head>
-<body style="font-family: 'poppins', serif;" class="bg-[#edf2fb]">
+<body >
     <div id="root" ></div>
 </body>
 <script type="module" src="./src/main.jsx"></script>
